; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/lsasrv/extr_lookup.c_CreateSidFromSidAndRid.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/lsasrv/extr_lookup.c_CreateSidFromSidAndRid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i64)* @CreateSidFromSidAndRid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @CreateSidFromSidAndRid(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i64*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i32* @RtlSubAuthorityCountSid(i32* %12)
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp sge i32 %15, 8
  br i1 %16, label %17, label %18

17:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %60

18:                                               ; preds = %2
  %19 = load i32, i32* %6, align 4
  %20 = add nsw i32 %19, 1
  %21 = call i64 @RtlLengthRequiredSid(i32 %20)
  store i64 %21, i64* %9, align 8
  %22 = load i64, i64* %9, align 8
  %23 = call i32* @MIDL_user_allocate(i64 %22)
  store i32* %23, i32** %7, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = icmp eq i32* %24, null
  br i1 %25, label %26, label %27

26:                                               ; preds = %18
  store i32* null, i32** %3, align 8
  br label %60

27:                                               ; preds = %18
  %28 = load i32*, i32** %7, align 8
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @RtlIdentifierAuthoritySid(i32* %29)
  %31 = load i32, i32* %6, align 4
  %32 = add nsw i32 %31, 1
  %33 = call i32 @RtlInitializeSid(i32* %28, i32 %30, i32 %32)
  store i64 0, i64* %8, align 8
  br label %34

34:                                               ; preds = %49, %27
  %35 = load i64, i64* %8, align 8
  %36 = load i32, i32* %6, align 4
  %37 = sext i32 %36 to i64
  %38 = icmp slt i64 %35, %37
  br i1 %38, label %39, label %52

39:                                               ; preds = %34
  %40 = load i32*, i32** %4, align 8
  %41 = load i64, i64* %8, align 8
  %42 = call i64* @RtlSubAuthoritySid(i32* %40, i64 %41)
  store i64* %42, i64** %10, align 8
  %43 = load i32*, i32** %7, align 8
  %44 = load i64, i64* %8, align 8
  %45 = call i64* @RtlSubAuthoritySid(i32* %43, i64 %44)
  store i64* %45, i64** %11, align 8
  %46 = load i64*, i64** %10, align 8
  %47 = load i64, i64* %46, align 8
  %48 = load i64*, i64** %11, align 8
  store i64 %47, i64* %48, align 8
  br label %49

49:                                               ; preds = %39
  %50 = load i64, i64* %8, align 8
  %51 = add nsw i64 %50, 1
  store i64 %51, i64* %8, align 8
  br label %34

52:                                               ; preds = %34
  %53 = load i32*, i32** %7, align 8
  %54 = load i32, i32* %6, align 4
  %55 = sext i32 %54 to i64
  %56 = call i64* @RtlSubAuthoritySid(i32* %53, i64 %55)
  store i64* %56, i64** %11, align 8
  %57 = load i64, i64* %5, align 8
  %58 = load i64*, i64** %11, align 8
  store i64 %57, i64* %58, align 8
  %59 = load i32*, i32** %7, align 8
  store i32* %59, i32** %3, align 8
  br label %60

60:                                               ; preds = %52, %26, %17
  %61 = load i32*, i32** %3, align 8
  ret i32* %61
}

declare dso_local i32* @RtlSubAuthorityCountSid(i32*) #1

declare dso_local i64 @RtlLengthRequiredSid(i32) #1

declare dso_local i32* @MIDL_user_allocate(i64) #1

declare dso_local i32 @RtlInitializeSid(i32*, i32, i32) #1

declare dso_local i32 @RtlIdentifierAuthoritySid(i32*) #1

declare dso_local i64* @RtlSubAuthoritySid(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
